# LoRa-SDR-Lightweight-Standalone-Library-clean

./: .gitignore  .gitmodules  API_SPEC.md  CMakeLists.txt  PORTING_NOTES.md  README.md  SEMANTIC_COMPATIBILITY.md  TEST_PLAN.md  THIRD_PARTY.md
include/lora_phy/: ChirpGenerator.hpp  LoRaCodes.hpp  LoRaDetector.hpp  kissfft.hh  phy.hpp
include/lorawan/: aes.h  lorawan.hpp
runners/: lora_phy_vector_dump.cpp  lorawan_roundtrip.cpp  rx_runner.cpp  tx_runner.cpp
scripts/: compare_perf.py  compare_vectors.py  generate_baseline_vectors.py  generate_lora_phy_vectors.py  generate_vectors.sh  scan_allocs.sh
src/lorawan/: aes.c  lorawan.cpp
src/phy/: LoRaDecoder.cpp  LoRaDemod.cpp  LoRaEncoder.cpp  LoRaMod.cpp  phy.cpp
tests/: alloc_tracker.h  base64_utils.hpp  base64_utils_test.cpp  bit_exact_test.cpp  e2e_chain_test.cpp  equal_power_bin_test.cpp  error_code_test.cpp  lorawan_mic_test.cpp  lorawan_roundtrip.py  no_alloc_test.cpp  odd_symbol_count_test.cpp  performance_test.cpp  profiles.yaml  roundtrip_test.cpp  scratch_buffer_error_test.cpp  sync_word_test.cpp  test_main.cpp  whitening_test.cpp
vectors/golden/: equal_power_iq.b64  golden_summary.json  sync_word_iq.b64
